--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://192.168.0.104:3001
+NEXT_PUBLIC_API_URL=https://multivendor-delivery.onrender.com
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyAacayvOsrT9V6wh3iY1DShwJjpw_AlynE
